--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
